syntax = "proto3"; 						        //指定版本信息，不指定会报错
option go_package = "github.com/zhangrt/voyager1_core/auth/grpc/pb";                       //不指定会报错
package auth.grpc.pb.service;						//后期生成go文件的包名


service AuthService {

    rpc ReadAuthentication(Token) returns (Result) {};

    rpc GrantedAuthority(Policy) returns (Result) {};

    rpc GetUser(Token)returns (User) {};
}

// token 鉴权
message Token {
    string token = 1;
}

// path和method请求验证策略
message Policy {
    string path = 1;
    string method = 2;
    string authorityId = 3;
}

message Result {
    bool success = 1;
    string msg = 2;
    CustomClaims claims = 3;
}
message User {
    int64  userID       = 1;
    string UUID         = 2;
    string authorityId    = 3;
    CustomClaims claims = 4;
    string key = 5;
}

message CustomClaims {
    BaseClaims claims       = 1;
	int64 BufferTime        = 2;
	StandardClaims standard = 3;
}

message BaseClaims {
    int64  userID       = 1;
    string UUID         = 2;
    string authorityId    = 3;
    string account     = 4;
    string name     = 5;
}

message StandardClaims {
	string audience     = 1;
	int64 expiresAt     = 2;
	string id           = 3;
	int64 issuedAt      = 4;
	string issuer       = 5;
	int64 notBefore     = 6;
	string subject      = 7;
}