syntax = "proto3"; 						//指定版本信息，不指定会报错
option go_package = "./";               //不指定会报错
package pb;						        //后期生成go文件的包名

// token 鉴权
message Token {
    string token = 1;
    string key = 2;
}

// path和method请求验证策略
message Policy {
    string token = 1;
    string path = 2;
    string method = 3;
    string key = 4;
}

message Result {
    bool success = 1;
    string msg = 2;
    CustomClaims claims = 3;
    string key = 4;
    string newToken = 5;
}

message HearBeat {
    int32 id =1;
}

message Receipe {
    int32 id =1;
}

message User {
    string ID         = 1;
    repeated string roleIds    = 2;
    CustomClaims claims = 3;
    string key = 4;
}

message CustomClaims {
    BaseClaims claims       = 1;
	int64 BufferTime        = 2;
	StandardClaims standard = 3;
}

message BaseClaims {
    string ID         = 1;
    repeated string roleIds    = 2;
    string account     = 3;
    string name     = 4;
}

message StandardClaims {
	string audience     = 1;
	int64 expiresAt     = 2;
	string id           = 3;
	int64 issuedAt      = 4;
	string issuer       = 5;
	int64 notBefore     = 6;
	string subject      = 7;
}